--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,39 +5,77 @@
     android:layout_height="match_parent"
     tools:context="design.demo.rippledemo.MainActivity">
 
-    <LinearLayout
+    <FrameLayout
+        android:id="@+id/address_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_margin="8dp"
-        android:background="@drawable/pickupborder">
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="?selectableItemBackground"
-            android:weightSum="2">
+            android:layout_height="wrap_content"
+            android:background="@drawable/pickupborder"
+            android:padding="4dp">
 
-            <TextView
+            <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:background="?selectableItemBackground"
                 android:clickable="true"
+                android:focusable="true"
                 android:gravity="center_vertical"
-                android:padding="16dp"
-                android:text="Hello World!"
-                android:textSize="18sp" />
+                android:orientation="horizontal"
+                android:paddingLeft="8dp"
+                android:paddingRight="4dp">
 
-            <TextView
-                android:layout_width="0dp"
+                <TextView
+                    android:id="@+id/header_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:drawableLeft="@drawable/magnify"
+                    android:enabled="true"
+                    android:gravity="center_vertical"
+                    android:text="Where to go?"
+                    android:textColor="@android:color/black"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/address_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:ellipsize="end"
+                    android:enabled="true"
+                    android:gravity="center_vertical"
+                    android:maxLines="1"
+                    android:paddingLeft="4dp"
+                    android:paddingTop="2dp"
+                    android:textSize="15sp"
+                    android:windowSoftInputMode="stateHidden" />
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="1dip"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="4dp"
+                android:layout_marginTop="4dp"
+                android:background="#9e9e9e" />
+
+            <ImageView
+                android:id="@+id/recent_location_btn"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_gravity="center"
+                android:background="?selectableItemBackground"
                 android:clickable="true"
-                android:gravity="center_vertical"
-                android:padding="16dp"
-                android:text="Hello World 2!"
-                android:textSize="18sp" />
+                android:padding="10dp"
+                android:src="@drawable/history" />
 
         </LinearLayout>
-    </LinearLayout>
+
+    </FrameLayout>
 </RelativeLayout>
